--- a/index.html
+++ b/index.html
@@ -63,3 +63,18 @@
     </style>
 
     <img src="path to image" alt="image will be here" class="vaporwave-image">
+
+<video id="myVideo" width="320" height="176" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+
+<script>
+let vid = document.getElementById("myVideo");
+  vid.loop = true;
+  vid.load(); 
+</script> 
+
+
+</body> 
+</html>
